[package]
name = "swoop-ui"
version = "0.1.5"
edition = "2024"

authors = ["RenDaoEr <rendaoer@outlook.com>"]
description = "A swifuUI style bevy engine ui toolkit"
repository = "https://github.com/NoMaoSky/swoop-ui"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "ui"]
categories = ["game-development"]

[dependencies]
bevy_app = "0.16"
bevy_asset = "0.16.1"
bevy_color = "0.16.2"
bevy_ecs = "0.16"
bevy_image = "0.16.1"
bevy_ui = "0.16"
